halium_arm64: init: disable console service
Change-Id: I56ab30205f550591a060f2225518a47b0b7e1bd5
Signed-off-by: Alexander Martinz <amartinz@shiftphones.com>

--- a/rootdir/etc/init.disabled.rc
+++ b/rootdir/etc/init.disabled.rc
@@ -27,3 +27,8 @@ service time_daemon time_daemon_HYBRIS_DISABLED
     disabled
     oneshot
     override
+
+# Disable console as it conflicts with the rootfs console
+service console /system/bin/sh_HYBRIS_DISABLED
+    disabled
+    override
