halium: init.disabled.rc: disable USB hal 1.2 service
Change-Id: Ice8f2dcaa2e6c8a54880d294280937e100d9fcfe

--- a/rootdir/etc/init.disabled.rc
+++ b/rootdir/etc/init.disabled.rc
@@ -33,6 +33,11 @@ service vendor.usb-hal-1-1 android.hardware.usb@1.1-service_HYBRIS_DISABLED
     oneshot
     override
 
+service vendor.usb-hal-1-2 android.hardware.usb@1.2-service_HYBRIS_DISABLED
+    disabled
+    oneshot
+    override
+
 # Disable console as it conflicts with the rootfs console
 service console /system/bin/sh_HYBRIS_DISABLED
     disabled
